[gd_scene load_steps=10 format=3 uid="uid://xhhjsuy5md0f"]

[ext_resource type="Script" path="res://Scripts/npc_woman_2.gd" id="1_hl537"]
[ext_resource type="Texture2D" uid="uid://de7uvkeppk11f" path="res://Assets/Characters/NPC_Characters_v1.0/Female1.png" id="2_0hyow"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cheos"]
atlas = ExtResource("2_0hyow")
region = Rect2(0, 480, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pjn5"]
atlas = ExtResource("2_0hyow")
region = Rect2(32, 480, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk3i5"]
atlas = ExtResource("2_0hyow")
region = Rect2(64, 480, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfi24"]
atlas = ExtResource("2_0hyow")
region = Rect2(96, 480, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_oxl0f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cheos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pjn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk3i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfi24")
}],
"loop": true,
"name": &"Idle",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hd4k1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fv7kd"]
radius = 21.3776

[node name="npc_woman2" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_hl537")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_oxl0f")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hd4k1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fv7kd")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
